[tool.poetry]
name = "viz-manga"
version = "0.1.0"
description = ""
authors = ["Kevin Ramdath <krpent@gmail.com>"]
repository = "https://github.com/minormending/viz-manga"
readme = "README.md"
license = "MIT"
keywords = ["viz", "manga", "reader"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
