[tool.poetry]
name = "viz-manga"
version = "0.1.1"
description = "Viz Manga Reader"
authors = ["Kevin Ramdath <krpent@gmail.com>"]
repository = "https://github.com/minormending/viz-manga"
readme = "README.md"
license = "MIT"
keywords = ["viz", "manga", "reader"]

[tool.poetry.dependencies]
python = "^3.10"
viz-image-unobfuscate = "^0.1.1"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
nose2 = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
